--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <!-- #SITE SETUP -->
     <title>Lisa Jane Griffin</title>
-    <link rel="shortcut icon" href="./ico1.ico?v=8" />
 
     <!-- #LIBRARY STYLES -->
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css?v=8">
@@ -18,13 +17,18 @@
     <!-- #CUSTOM STYLESHEETS -->
     <link rel="stylesheet" type="text/css" href="styles/core.css">
 
+    <link rel="stylesheet" type="text/css" href="styles/animate.css">
+
+    <link rel="icon" type="image/png" href="img/ico.png">
+
 
 </head>
+
 
 <body ng-controller="mainController">
 
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="animated slideInDown  navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -58,156 +62,236 @@
     <br>
     <br>
     <div class="section full-height">
-
         <div class="row vertical-align">
-            <div class="col-md-5 col-md-offset-2">
-                <h1 class="text-center font-cursive text-accent"> Lisa Jane Griffin </h1>
-                <h3 class="font-weight-light text-center"> Honesty. Humility. Humour</h3>
+            <div class="col-md-5 col-md-offset-2 col-xs-7">
+                <h1 class="animated slideInLeft text-center font-cursive text-accent"> Lisa Jane Griffin </h1>
+                <!--                 <h3 class="animated fadeIn font-weight-light text-center"> 
+                    <span class="animated-delay-2 fadeIn"> Honesty.
+                    </span>  
+                    <span class="animated-delay-3 fadeIn"> Humility.
+                    </span> 
+                    <span class="animated-delay-4 fadeIn"> Humour
+                    </span> 
+                </h3> -->
+
+                <h3 class="animated-delay-2 fadeIn font-weight-light text-center"> 
+                    Inspiration with tenacity.
+                </h3>
 
             </div>
 
-            <div class="col-md-5 ">
+            <div class="col-md-5 col-xs-5">
                 <div class="col-md-6 col-md-offset-3">
-                    <img class="shadow-low img-circle img-responsive" src="./img/lisa.jpg"></img>
+                    <img class="animated fadeIn shadow-low img-circle img-responsive" src="./img/lisa.jpg"></img>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <hr>
     <div class="container">
-
-
-        <hr>
-
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center">What I do </h2>
+                <h2 class="font-cursive text-center"> What I <strong class="text-accent">do</strong> </h2>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-4 text-center">
-                <h3 class="font-plain"> Consultant <h3>
-                    <i class="fa fa-4x fa-search"></i>
+            <div class="col-md-4 col-xs-4 text-center">
+                <h3 class="font-plain"> Consultant </h3>
+                <i class="fa fa-4x fa-search"></i>
             </div>
-            <div class="col-md-4 text-center">
-                <h3 class="font-cursive"> Life coach<h3>
-                    <i class="fa fa-4x fa-graduation-cap"></i>
+            <div class="col-md-4 col-xs-4 text-center">
+                <h3 class="font-cursive"> Life coach</h3>
+                <i class="fa fa-4x fa-graduation-cap"></i>
             </div>
-            <div class="col-md-4 text-center">
-                <h3> Public speaker <h3>
-                     <i class="fa fa-4x fa-microphone"></i>
+            <div class="col-md-4 col-xs-4 text-center">
+                <h3> Public speaker </h3>
+                <i class="fa fa-4x fa-microphone"></i>
             </div>
         </div>
+    </div>
 
-        <hr> 
+
+    <hr>
+
+    <div class="section half-height">
 
 
-        <div class="row">
-            <div class="col-md-7">
-            </div>
-            <div class="col-md-5">
+        <div class="row vertical-align">
+            <div class="container">
+
+                <div class="col-md-6">
+                </div>
+                <div class="col-md-6">
                     <h2 class="font-plain"> Consultant SIO </h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, facilis voluptas maxime qui obcaecati dolores. Assumenda repellendus dicta, pariatur delectus deleniti vero mollitia, quasi molestiae iusto, odit fugiat vel consectetur!</p>
-            </div>
-        </div>
+                    <h3 class="text-secondary">Accountability. Responsibility. Liability. Pressure.</h3>
 
-        <hr>
+                    <p> Are the challenges ahead of you too daunting to complate? </p>
+                    <p> Being a Senior Investigating Officer can be a lonely place. I will introduce you to three loyal companions, they will guide you to achieve success. </p>
 
-        <div class="row">
-            <div class="col-md-5">
-                <h2 class="font-cursive"> Life coach </h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, facilis voluptas maxime qui obcaecati dolores. Assumenda repellendus dicta, pariatur delectus deleniti vero mollitia, quasi molestiae iusto, odit fugiat vel consectetur!</p>
-            </div>
-            <div class="col-md-7">
+                    <p class="text-accent">Honest, humility & humour</p>
 
-            </div>
-        </div>
+                    <p> I have faced daunting challenges and achieved successful outcomes. Read on to see my:</p>
 
-        <hr>
+                    <ul>
 
-        <div class="row">
-            <div class="col-md-7">
-
-            </div>
-            <div class="col-md-5">
-                <h2> Public speaker </h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, facilis voluptas maxime qui obcaecati dolores. Assumenda repellendus dicta, pariatur delectus deleniti vero mollitia, quasi molestiae iusto, odit fugiat vel consectetur!</p>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="font-cursive text-center"> What people are <strong class="text-accent">saying</strong> </h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="row">
-                    <div class="col-md-3">
-                        <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
-                    </div>
-                    <div class="col-md-9">
-
-                        <p><i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
-                        </p>
-                        <p> - <strong> Somebody </strong> some company </p>
-
-                    </div>
-                </div>
-                <br>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
-                            </div>
-                            <div class="col-md-7">
-
-                                <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp;<i class="fa fa-quote-right"></i>
-                                </p>
-
-                                <p> - <strong> Somebody </strong> some company </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
-                            </div>
-                            <div class="col-md-7">
-
-                                <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
-                                </p>
-
-                                <p> - <strong> Somebody </strong> some company </p>
-                            </div>
-                        </div>
-                    </div>
+                        <li>
+                            <a>86 day kidap in sudan</a>
+                        </li>
+                        <li>
+                            <a>'No-body' murder</a>
+                        </li>
+                        <li>
+                            <a>Child murder</a>
+                        </li>
+                        <li>
+                            <a>International investigations</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
 
-        <hr>
+    <hr>
 
-        <div class="row">
-            <div class="col-md-6">
-                Contact
-                
+    <div class="section half-height">
 
+        <div class="row vertical-align">
+            <div class="container">
+                <div class="col-md-5">
+                    <h2 class="font-cursive"> Life coach </h2>
+                    <br>
+                    <h4>Change your thinking. </h4>
+                    <h4> Find what's holding you back. </h4>
+                    <h4>Be the best version of yourself.</h4>
+                </div>
+                <div class="col-md-7">
+
+
+                </div>
             </div>
         </div>
+    </div>
+
+    <hr>
+
+    <div class="section half-height">
+
+        <div class="row vertical-align">
+            <div class="col-md-7">
+
+            </div>
+            <div class="col-md-5">
+                <h2> Public speaking </h2>
+
+                <h3 class="text-secondary"> The role of the Senior Investigating Officer</h3>
+                <p> Test </p>
+                <h3 class="text-secondary"> Homocide investigations</h3>
+                <p> Test </p>
+
+                <h4 class="text-accent font-cursive"> Inspirational</h4>
+                <p> Test </p>
+
+            </div>
+
+        </div>
+    </div>
+
+    <hr>
 
 
+    <div class="col-md-12">
+        <h2 class="font-cursive text-center"> What people are <strong class="text-accent">saying</strong> </h2>
+    </div>
 
-        <hr>
+    <!--    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <div class="row">
+                <div class="col-md-3">
+                    <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+                </div>
+                <div class="col-md-9">
 
-        <!-- ##BOWER PACKAGES -->
-        <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8"></script>
+                    <p><i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
+                    </p>
+                    <p> - <strong> Somebody </strong> some company </p>
+
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+                        </div>
+                        <div class="col-md-7">
+
+                            <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp;<i class="fa fa-quote-right"></i>
+                            </p>
+
+                            <p> - <strong> Somebody </strong> some company </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+                        </div>
+                        <div class="col-md-7">
+
+                            <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
+                            </p>
+
+                            <p> - <strong> Somebody </strong> some company </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> -->
+
+    <hr>
+
+
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="cursive text-center"> How to <span class="text-accent"> find me </span> </h1>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <p class="text-secondary"> Louis John Bichard </p>
+        </div>
+    </div>
+
+    <h2 class="animate-in-view"> REMOVE ME </h2>
+
+    <!-- ##BOWER PACKAGES -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8"></script>
+    <script src="scripts/jquery.inview.js"></script>
+    <script>
+    $(document).ready(function() {
+        $('.animate-in-view').bind('inview', function(event, visible) {
+            $(".animate-in-view").hide();
+            if (visible == true) {
+                console.log('visible');
+                $(".animate-in-view").addClass('animated slideInLeft');
+                $(".animate-in-view").show();
+            }
+        });
+    });
+    </script>
 </body>
 
 </html>
