--- a/index.html
+++ b/index.html
@@ -189,25 +189,24 @@
 
                 <h3 class="text-secondary"> The role of the Senior Investigating Officer</h3>
                 <p> Test </p>
-                <h3 class="text-secondary"> Homocide investigations</h3>
+
+                <h3 class="text-secondary"> Homicide investigations</h3>
                 <p> Test </p>
 
                 <h4 class="text-accent font-cursive"> Inspirational</h4>
                 <p> Test </p>
-
             </div>
 
         </div>
     </div>
 
-    <hr>
-
+    <!-- 
 
     <div class="col-md-12">
         <h2 class="font-cursive text-center"> What people are <strong class="text-accent">saying</strong> </h2>
     </div>
 
-    <!--    <div class="row">
+       <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div class="row">
                 <div class="col-md-3">
@@ -259,10 +258,17 @@
 
     <hr>
 
-
-    <div class="row">
-        <div class="col-md-12">
-            <h1 class="cursive text-center"> How to <span class="text-accent"> find me </span> </h1>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-md-12">
+                <h2 class="font-cursive"> How to <span class="text-accent"> find me </span> </h2>
+                <p>
+                    <strong>Phone:</strong> 07762&nbsp;723&nbsp;260
+                </p>
+                <p>
+                    <strong>Email: contact@lisajanegriffin.com</strong>
+                </p>
+            </div>
         </div>
     </div>
 
