--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
     <hr>
-    <div class="container">
+    <div class="container wow fadeIn" data-wow-delay="0.5s">
         <div class="row">
             <div class="col-md-12">
                 <h2 class="font-cursive text-center"> What I <strong class="text-accent">do</strong> </h2>
@@ -116,7 +116,7 @@
 
     <hr>
 
-    <div class="section half-height">
+    <div class="section half-height wow slideInLeft" data-wow-delay="0.5s">
 
 
         <div class="row vertical-align">
@@ -157,7 +157,7 @@
 
     <hr>
 
-    <div class="section half-height">
+    <div class="section half-height wow slideInRight" data-wow-delay="0.5s">
 
         <div class="row vertical-align">
             <div class="container">
@@ -178,22 +178,22 @@
 
     <hr>
 
-    <div class="section half-height">
+    <div class="section half-height wow slideInLeft" data-wow-delay="0.5s">
 
-        <div class="row vertical-align">
-            <div class="col-md-7">
+        <div class="row vertical-align ">
+            <div class="col-md-7 ">
 
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 ">
                 <h2> Public speaking </h2>
 
-                <h3 class="text-secondary"> The role of the Senior Investigating Officer</h3>
+                <h3 class="text-secondary "> The role of the Senior Investigating Officer</h3>
                 <p> Test </p>
 
-                <h3 class="text-secondary"> Homicide investigations</h3>
+                <h3 class="text-secondary "> Homicide investigations</h3>
                 <p> Test </p>
 
-                <h4 class="text-accent font-cursive"> Inspirational</h4>
+                <h4 class="text-accent font-cursive "> Inspirational</h4>
                 <p> Test </p>
             </div>
 
@@ -202,19 +202,19 @@
 
     <!-- 
 
-    <div class="col-md-12">
-        <h2 class="font-cursive text-center"> What people are <strong class="text-accent">saying</strong> </h2>
+    <div class="col-md-12 ">
+        <h2 class="font-cursive text-center "> What people are <strong class="text-accent ">saying</strong> </h2>
     </div>
 
-       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <div class="row">
-                <div class="col-md-3">
-                    <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+       <div class="row ">
+        <div class="col-md-8 col-md-offset-2 ">
+            <div class="row ">
+                <div class="col-md-3 ">
+                    <img class="img-responsive img-circle " src="./img/lisa.jpg "></img>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 ">
 
-                    <p><i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
+                    <p><i class="fa fa-quote-left "></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right "></i>
                     </p>
                     <p> - <strong> Somebody </strong> some company </p>
 
@@ -223,29 +223,29 @@
             <br>
             <br>
             <br>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+            <div class="row ">
+                <div class="col-md-6 ">
+                    <div class="row ">
+                        <div class="col-md-5 ">
+                            <img class="img-responsive img-circle " src="./img/lisa.jpg "></img>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 ">
 
-                            <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp;<i class="fa fa-quote-right"></i>
+                            <p> <i class="fa fa-quote-left "></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp;<i class="fa fa-quote-right "></i>
                             </p>
 
                             <p> - <strong> Somebody </strong> some company </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="row">
-                        <div class="col-md-5">
-                            <img class="img-responsive img-circle" src="./img/lisa.jpg"></img>
+                <div class="col-md-6 ">
+                    <div class="row ">
+                        <div class="col-md-5 ">
+                            <img class="img-responsive img-circle " src="./img/lisa.jpg "></img>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-7 ">
 
-                            <p> <i class="fa fa-quote-left"></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right"></i>
+                            <p> <i class="fa fa-quote-left "></i> &nbsp; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos unde quasi, aspernatur sapiente dolore omnis architecto modi, quo repellat vel perferendis delectus, obcaecati! Voluptatibus ratione, libero nemo, laudantium beatae fugiat. &nbsp; <i class="fa fa-quote-right "></i>
                             </p>
 
                             <p> - <strong> Somebody </strong> some company </p>
@@ -258,10 +258,10 @@
 
     <hr>
 
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-12">
-                <h2 class="font-cursive"> How to <span class="text-accent"> find me </span> </h2>
+    <div class="container wow fadeIn " data-wow-delay="0.5s">
+        <div class="row text-center ">
+            <div class="col-md-12 ">
+                <h2 class="font-cursive "> How to <span class="text-accent "> find me </span> </h2>
                 <p>
                     <strong>Phone:</strong> 07762&nbsp;723&nbsp;260
                 </p>
@@ -274,29 +274,19 @@
 
     <hr>
 
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <p class="text-secondary"> Louis John Bichard </p>
+    <div class="row ">
+        <div class="col-md-12 text-center ">
+            <p class="text-secondary "> Louis John Bichard </p>
         </div>
     </div>
 
-    <h2 class="animate-in-view"> REMOVE ME </h2>
 
     <!-- ##BOWER PACKAGES -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8"></script>
-    <script src="scripts/jquery.inview.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js "></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js?v=8 "></script>
+    <script src="bower_components/wow/dist/wow.min.js "></script>
     <script>
-    $(document).ready(function() {
-        $('.animate-in-view').bind('inview', function(event, visible) {
-            $(".animate-in-view").hide();
-            if (visible == true) {
-                console.log('visible');
-                $(".animate-in-view").addClass('animated slideInLeft');
-                $(".animate-in-view").show();
-            }
-        });
-    });
+    new WOW().init();
     </script>
 </body>
 
